# placy

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: backend-ci.yml  ci.yml
authentication/: __init__.py  __main__.py  models.py  routes.py
backend/: Dockerfile  README.md  __main__.py  database.py  logging.py  models.py  placy.py  pyproject.toml  pyrightconfig.json  routes.py
backend/authentication/: mock.env  pyproject.toml
backend/authentication/placy/: __main__.py  placy.py
backend/authentication/placy/models/: auth.py  community_orm.py  database.py
backend/authentication/placy/routes/: __init__.py
backend/authentication/placy/services/: config.py
backend/authentication/placy/services/databases/: auth_repository.py  otp_repository.py
backend/authentication/tests/: auth_test.py  simple_test.py
backend/community/: package.json
backend/community/src/api/: index.ts
backend/community/src/api/controllers/: communityController.ts
backend/community/src/api/routes/: community.ts
backend/community/src/interfaces/: ICommunity.ts
backend/community/src/models/: community.ts
backend/community/src/repositories/: communityRepository.ts
backend/community/src/services/: communityService.ts
backend/placy/: __init__.py  __main__.py  database.py  models.py  placy.py  routes.py
backend/placy/controllers/: auth.py  community.py
backend/placy/models/: auth.py  auth_orm.py  community.py  response.py
backend/placy/routes/: auth.py  community.py
backend/placy/services/: config.py  database.py  email.py  logging.py
backend/placy/services/databases/: community_repo.py
backend/tests/: auth_test.py  http_test.py
client/: .prettierrc.json  app.json  babel.config.js  package.json
client/src/: App.js
client/src/components/: HoverableOpacity.js  OtpInput.js
client/src/config/: index.js
client/src/dummy-data/: commentsData.js  feedData.js  postData.js
client/src/navigation/: Drawer.js  index.js  index.web.js  linking.js
tests/: http_test.py  simple_test.py
(+28 files in other folders)
