[tool.poetry]
name = "placy"
version = "0.1.0"
description = "Placement dashboard for Students"
authors = ["pspiagicw <pspiagicw@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
httpx = "^0.23.1"
uvicorn = "^0.20.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.0"
pdoc = "^12.3.0"
pre-commit = "^2.20.0"
pydocstyle = "^6.1.1"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
